--- a/css/styles.css
+++ b/css/styles.css
@@ -105,4 +105,13 @@ border-radius: 3px;
     background-color: #bdc3c7;
     color: #7f8c8d;
 }
-
+.btn {
+    border: none;
+    background-color: pink;
+    padding: 20px 40px;
+    font-size: 16px;
+    cursor: pointer;
+    display: inline-block;
+}
+.btn:hover {background: #eee;}
+.rate {color: aqua}
