--- a/css/styles.css
+++ b/css/styles.css
@@ -81,71 +81,6 @@ body{
 .btn:hover {background: #eee;}
 .rate {color: aqua}
 
-@import "compass/css3";
-
-$unchecked-star: '\2606';
-$unchecked-color: #888;
-$checked-star: '\2605';
-$checked-color: #e52;
-
-.star-cb-group {
-  /* remove inline-block whitespace */
-  font-size: 0;
-  * {
-    font-size: 1rem;
-  }
-  /* flip the order so we can use the + and ~ combinators */
-  unicode-bidi: bidi-override;
-  direction: rtl;
-  & > input {
-    display: none;
-    & + label {
-      /* only enough room for the star */
-      display: inline-block;
-      overflow: hidden;
-      text-indent: 9999px;
-      width: 1em;
-      white-space: nowrap;
-      cursor: pointer;
-      &:before {
-        display: inline-block;
-        text-indent: -9999px;
-        content: $unchecked-star;
-        color: $unchecked-color;
-      }
-    }
-    &:checked ~ label:before,
-      & + label:hover ~ label:before,
-      & + label:hover:before {
-      content: $checked-star;
-      color: #e52;
-      text-shadow: 0 0 1px #333;
-    }
-  }
-  
-  /* the hidden clearer */
-  & > .star-cb-clear + label {
-    text-indent: -9999px;
-    width: .5em;
-    margin-left: -.5em;
-  }
-  & > .star-cb-clear + label:before {
-    width: .5em;
-  }
-
-  &:hover > input + label:before {
-    content: $unchecked-star;
-    color: $unchecked-color;
-    text-shadow: none;
-  }
-  &:hover > input + label:hover ~ label:before,
-  &:hover > input + label:hover:before {
-    content: $checked-star;
-    color: $checked-color;
-    text-shadow: 0 0 1px #333;
-  }
-}
-
 // extra styles
 :root {
   font-size: 2em;
@@ -164,4 +99,77 @@ fieldset {
   width: 5em;
   text-align: center;
   background: transparent;
+}
+
+
+form .stars {
+  background: url("stars.png") repeat-x 0 0;
+  width: 150px;
+  margin: 0 auto;
+}
+ 
+form .stars input[type="radio"] {
+  position: absolute;
+  opacity: 0;
+  filter: alpha(opacity=0);
+}
+form .stars input[type="radio"].star-5:checked ~ span {
+  width: 100%;
+}
+form .stars input[type="radio"].star-4:checked ~ span {
+  width: 80%;
+}
+form .stars input[type="radio"].star-3:checked ~ span {
+  width: 60%;
+}
+form .stars input[type="radio"].star-2:checked ~ span {
+  width: 40%;
+}
+form .stars input[type="radio"].star-1:checked ~ span {
+  width: 20%;
+}
+form .stars label {
+  display: block;
+  width: 30px;
+  height: 30px;
+  margin: 0!important;
+  padding: 0!important;
+  text-indent: -999em;
+  float: left;
+  position: relative;
+  z-index: 10;
+  background: transparent!important;
+  cursor: pointer;
+}
+form .stars label:hover ~ span {
+  background-position: 0 -30px;
+}
+form .stars label.star-5:hover ~ span {
+  width: 100% !important;
+}
+form .stars label.star-4:hover ~ span {
+  width: 80% !important;
+}
+form .stars label.star-3:hover ~ span {
+  width: 60% !important;
+}
+form .stars label.star-2:hover ~ span {
+  width: 40% !important;
+}
+form .stars label.star-1:hover ~ span {
+  width: 20% !important;
+}
+form .stars span {
+  display: block;
+  width: 0;
+  position: relative;
+  top: 0;
+  left: 0;
+  height: 30px;
+  background: url("http://pngimg.com/uploads/star/star_PNG41478.png") repeat-x 0 -60px;
+  -webkit-transition: -webkit-width 0.5s;
+  -moz-transition: -moz-width 0.5s;
+  -ms-transition: -ms-width 0.5s;
+  -o-transition: -o-width 0.5s;
+  transition: width 0.5s;
 }
