--- a/css/styles.css
+++ b/css/styles.css
@@ -103,7 +103,7 @@ fieldset {
 
 
 form .stars {
-  background: url("stars.png") repeat-x 0 0;
+  background: url("http://pngimg.com/uploads/star/star_PNG41478.png") repeat-x 0 0;
   width: 150px;
   margin: 0 auto;
 }
