--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,7 @@
 body{
     background-color:blanchedalmond;
     margin: 0px;
+    text-align: center;
 }
 #container{
     background-color:darkseagreen;
