--- a/css/t2hekesed.css
+++ b/css/t2hekesed.css
@@ -1,74 +1,169 @@
 body {
-  padding: 50px;
+    padding: 50px;
 }
 form .stars {
-  background: url("stars.png") repeat-x 0 0;
-  width: 150px;
-  margin: 0 auto;
+    background: url("stars.png") repeat-x 0 0;
+    width: 150px;
+    margin: 0 auto;
 }
 
 form .stars input[type="radio"] {
-  position: absolute;
-  opacity: 0;
-  filter: alpha(opacity=0);
+    position: absolute;
+    opacity: 0;
+    filter: alpha(opacity=0);
 }
 form .stars input[type="radio"].star-5:checked ~ span {
-  width: 100%;
+    width: 100%;
 }
 form .stars input[type="radio"].star-4:checked ~ span {
-  width: 80%;
+    width: 80%;
 }
 form .stars input[type="radio"].star-3:checked ~ span {
-  width: 60%;
+    width: 60%;
 }
 form .stars input[type="radio"].star-2:checked ~ span {
-  width: 40%;
+    width: 40%;
 }
 form .stars input[type="radio"].star-1:checked ~ span {
-  width: 20%;
+    width: 20%;
 }
 form .stars label {
-  display: block;
-  width: 30px;
-  height: 30px;
-  margin: 0;
-  padding: 0;
-  text-indent: -999em;
-  float: left;
-  position: relative;
-  z-index: 10;
-  background: transparent!important;
-  cursor: pointer;
+    display: block;
+    width: 30px;
+    height: 30px;
+    margin: 0;
+    padding: 0;
+    text-indent: -999em;
+    float: left;
+    position: relative;
+    z-index: 10;
+    background: transparent!important;
+    cursor: pointer;
 }
 form .stars label:hover ~ span {
-  background-position: 0 -30px;
+    background-position: 0 -30px;
 }
 form .stars label.star-5:hover ~ span {
-  width: 100% !important;
+    width: 100% !important;
 }
 form .stars label.star-4:hover ~ span {
-  width: 80% !important;
+    width: 80% !important;
 }
 form .stars label.star-3:hover ~ span {
-  width: 60% !important;
+    width: 60% !important;
 }
 form .stars label.star-2:hover ~ span {
-  width: 40% !important;
+    width: 40% !important;
 }
 form .stars label.star-1:hover ~ span {
-  width: 20% !important;
+    width: 20% !important;
 }
 form .stars span {
-  display: block;
-  width: 0;
+    display: block;
+    width: 0;
+    position: relative;
+    top: 0;
+    left: 0;
+    height: 30px;
+    background: url("stars.png") repeat-x 0 -60px;
+    -webkit-transition: -webkit-width 0.5s;
+    -moz-transition: -moz-width 0.5s;
+    -ms-transition: -ms-width 0.5s;
+    -o-transition: -o-width 0.5s;
+    transition: width 0.5s;
+}
+
+* {box-sizing:border-box}
+
+/* Slideshow container */
+.slideshow-container {
+  max-width: 1000px;
   position: relative;
+  margin: auto;
+}
+
+/* Hide the images by default */
+.mySlides {
+  display: none;
+}
+
+/* Next & previous buttons */
+.prev, .next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  margin-top: -22px;
+  padding: 16px;
+  color: white;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+}
+
+/* Position the "next button" to the right */
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover, .next:hover {
+  background-color: rgba(0,0,0,0.8);
+}
+
+/* Caption text */
+.text {
+  color: #f2f2f2;
+  font-size: 15px;
+  padding: 8px 12px;
+  position: absolute;
+  bottom: 8px;
+  width: 100%;
+  text-align: center;
+}
+
+/* Number text (1/3 etc) */
+.numbertext {
+  color: #f2f2f2;
+  font-size: 12px;
+  padding: 8px 12px;
+  position: absolute;
   top: 0;
-  left: 0;
-  height: 30px;
-  background: url("stars.png") repeat-x 0 -60px;
-  -webkit-transition: -webkit-width 0.5s;
-  -moz-transition: -moz-width 0.5s;
-  -ms-transition: -ms-width 0.5s;
-  -o-transition: -o-width 0.5s;
-  transition: width 0.5s;
+}
+
+/* The dots/bullets/indicators */
+.dot {
+  cursor: pointer;
+  height: 15px;
+  width: 15px;
+  margin: 0 2px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+}
+
+.active, .dot:hover {
+  background-color: #717171;
+}
+
+/* Fading animation */
+.fade {
+  -webkit-animation-name: fade;
+  -webkit-animation-duration: 1.5s;
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+
+@-webkit-keyframes fade {
+  from {opacity: .4} 
+  to {opacity: 1}
+}
+
+@keyframes fade {
+  from {opacity: .4} 
+  to {opacity: 1}
 }
