--- a/css/styles.css
+++ b/css/styles.css
@@ -2,7 +2,7 @@ body{
     background-color:blanchedalmond;
     margin: 0px;
     text-align: center;
-
+}
 #container{
     background-color:darkseagreen;
     width: 80%;
