--- a/css/styles.css
+++ b/css/styles.css
@@ -143,3 +143,17 @@ fieldset {
   background: transparent;
 }
 
+a:link {
+    text-decoration: none;
+}
+
+a:visited {
+    text-decoration: none;
+}
+
+a:hover {
+    text-decoration: underline;
+}
+
+a:active {
+    text-decoration: underline;
