--- a/css/styles.css
+++ b/css/styles.css
@@ -74,6 +74,11 @@ td {
 	text-align: left;
 }
 
+th {
+	text-align: left;
+	padding: 0 1em 0 1em
+}
+
 .rate{
 	-webkit-transition: -webkit-transform 0.4s ease-out;
 	-o-transition: -o-transform 0.4s ease;
