--- a/css/page3.css
+++ b/css/page3.css
@@ -1,4 +1,4 @@
-/*slideshow osa*/
+/*Slideshow osa*/
 
 * {box-sizing: border-box}
 body {font-family: Verdana, sans-serif; margin:0}
@@ -28,13 +28,11 @@ img {vertical-align: middle;}
   user-select: none;
 }
 
-/* Position the "next button" to the right */
 .next {
   right: 0;
   border-radius: 3px 0 0 3px;
 }
 
-/* On hover, add a black background color with a little bit see-through */
 .prev:hover, .next:hover {
   background-color: rgba(0,0,0,0.8);
 }
@@ -48,9 +46,9 @@ img {vertical-align: middle;}
   bottom: 8px;
   width: 100%;
   text-align: center;
+  background-color: black;
 }
 
-/* Number text (1/3 etc) */
 .numbertext {
   color: #f2f2f2;
   font-size: 12px;
@@ -59,7 +57,6 @@ img {vertical-align: middle;}
   top: 0;
 }
 
-/* The dots/bullets/indicators */
 .dot {
   cursor: pointer;
   height: 15px;
@@ -93,13 +90,12 @@ img {vertical-align: middle;}
   to {opacity: 1}
 }
 
-/* On smaller screens, decrease text size */
 @media only screen and (max-width: 300px) {
   .prev, .next,.text {font-size: 11px}
 }
 
 
-/*video osa*/
+/*Video osa*/
 .video_container {
     position: relative;
     width: 100%;
