--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,7 @@ body {
 }
 
 #container {
+	border-radius: 15px;
     background-color:darkseagreen;
     width: 80%;
     height: 100%;
@@ -16,7 +17,10 @@ body {
 }
 
 .header {
-    padding: 20px;
+	width: 80%;
+	margin-left: 10%;
+	margin-right: 10%;
+    padding: 20px 0 20px 0;
     text-align: center;
     background: url(https://www.freewebheaders.com/wordpress/wp-content/gallery/cats/lovely-american-shorthair-kitten-website-header.jpg);
     height: 230px;
@@ -24,6 +28,13 @@ body {
     font-size: 30px;
 }
 
+h1 {
+	text-shadow:
+		0px 0px 0 darkseagreen,
+		2px 0px 0 darkseagreen,
+		0px 2px 0 darkseagreen,
+		2px 2px 0 darkseagreen;
+}
 
 /*Footer css */
 #footer {
@@ -45,6 +56,7 @@ body {
 }
 
 .accordion {
+	border-radius: 15px;
     position: relative;
     margin-bottom: 3px;
     width: 100%;
@@ -79,6 +91,13 @@ body {
 .cat-table th {
 	text-align: left;
 	padding: 0 1em 0 1em
+}
+
+.faktid {
+	width: auto;
+	margin-left: auto;
+	margin-right: auto;
+	text-align: left;
 }
 
 .rate {
