--- a/css/page3.css
+++ b/css/page3.css
@@ -1,7 +1,7 @@
 /*Slideshow osa*/
 
 * {box-sizing: border-box}
-body {font-family: Verdana, sans-serif; margin:0}
+body {font-family: "Averia Serif Libre"; margin:0}
 .mySlides {display: none}
 img {vertical-align: middle;}
 
